--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon",
-    "start": "node"
+    "start": "node src/backend/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +21,7 @@
     "express": "^4.16.4",
     "express-brute": "^1.0.1",
     "express-form-data": "^2.0.1",
-    "knex": "^0.21.1",
+    "knex": "^0.21.2",
     "multer": "^1.3.0",
     "mysql2": "^2.1.0",
     "path": "^0.12.7",
